--- a/tester/Cargo.toml
+++ b/tester/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.3", features = ["derive"] }
+narabe = { version = "0.1.0", path = "../narabe" }
 protocol = { version = "0.1.0", path = "../protocol" }
 rand = "0.8.5"
 tools = { version = "0.1.0", path = "../tools" }
